--- a/index.html
+++ b/index.html
@@ -20,8 +20,22 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./static/css/style.css">
     <link rel="stylesheet" href="./static/css/animations.css">
+	  <style>
+    .logo-container {
+      background-color: white;
+      text-align: center;
+      padding: 0 50px;
+	  border-radius: 15px;
+    }
+    .logo-container img {
+      max-height: 100px; /* Điều chỉnh chiều cao nếu cần */
+    }
+  </style>
 </head>
 <body>
+  <div class="logo-container">
+    <img src="./static/img/Logo.png" alt="Logo công ty">
+  </div>
     <div class="background-elements">
         <div class="lantern lantern-1">
             <img src="./static/svg/lantern.svg" alt="Decorative lantern">
